--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
     <string name="favorite_title">Favorite</string>
     <string name="finding_bus_stops">Finding bus stops.</string>
-    <string name="please_wait">Please wait...</string>
+    <string name="please_wait">Please wait…</string>
     <string name="added">Added</string>
     <string name="removed">Removed</string>
     <string name="to_favorites">to favorites.</string>
